# mandelbrot_set

./: .gitmodules  CMakeLists.txt  README.md
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
res/shaders/: default.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Render.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
